# FactScreen

./: .dockerignore  .gitignore  Dockerfile  FLYIO_DEPLOYMENT.md  Makefile  README.md  RENDER_DEPLOYMENT.md  RENDER_FREE_TIER.md  RENDER_PORT_FIX.md  RENDER_TROUBLESHOOTING.md  fly.toml  pyproject.toml  pytest.ini  render.yaml  render_start.py  requirements-dev.txt  requirements.txt  run.bat  setup.py  start.py  streamlit_app.py
config/: local.yaml
entrypoint/: render_start.py  server.py
factscreen-backend/app.py/: main.py
factscreen-backend/app.py/core/: config.py
factscreen_backend/: API_DOCUMENTATION.md  BACKEND_STRUCTURE.md  pyproject.toml  pytest.ini
factscreen_backend/app/: main.py
factscreen_backend/app/api/: __init__.py  routes.py
factscreen_backend/app/core/: config.py
factscreen_backend/app/models/: __init__.py  claim_models.py  schemas.py
factscreen_backend/app/services/: claim_classifier.py  claim_extract.py  similarity_filter.py
factscreen_backend/tests/: README.md  conftest.py  test_api.py  test_integration.py  test_services.py
factscreen_backend/utils/: clean_cache.py  setup.py  start_server.py
src/: __init__.py  utils.py
src/app/: main.py  streamlit_app.py
src/app/api/: routes.py
src/app/core/: app_logging.py  config.py
src/app/models/: __init__.py  claim_models.py  schemas.py
src/app/services/: claim_classifier.py  claim_extract.py  classify.py  factcheck.py  fetch.py  gemini_service.py  report.py  sentiment.py  similarity_filter.py
src/app/streamlit/: config.py  helpers.py  main.py  styles.py
src/app/utils/: ocr.py
src/pipelines/: __init__.py  feature_eng_pipeline.py  inference_pipeline.py  validation_pipeline.py
tests/: README.md  README_TEST.md  __init__.py  conftest.py  test_api.py  test_api_integration.py  test_integration.py  test_services.py
tests/integration/: test_api_routes.py  test_workflows.py
tests/unit/pipelines/: test_feature_eng.py  test_inference.py  test_validation.py
(+20 files in other folders)
