[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factscreen"
version = "0.1.0"
description = "FactScreen backend and utilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "FactScreen" }]
license = { text = "MIT" }

# Runtime dependencies
dependencies = [
  # Core web framework
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "pydantic>=2",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "pillow>=10",

  # HTTP and utilities
  "httpx>=0.27",
  "requests>=2.32",
  "pyyaml>=6.0",
  "loguru>=0.7",
  "tenacity>=8.2",

  # Machine learning (optional)
  "transformers>=4.41",
  "torch>=2.2",
  "scikit-learn>=1.5",
  "nltk>=3.8",

  # Testing
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx[http2]>=0.27",
]

[project.optional-dependencies]
# Google client libraries
google = [
  "google-api-python-client>=2.131",
  "google-auth>=2.30",
  "google-auth-oauthlib>=1.2",
  "google-auth-httplib2>=0.2",
]

[tool.setuptools]
# This project currently uses pyproject.toml for dependency management only.
# If packaging modules later, configure package discovery here.
