[build-system]
requires = ["setuptools>=69.5.1", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "factscreen"
version = "0.1.0"
description = "FactScreen backend and utilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "FactScreen" }]
license = { text = "MIT" }

# Runtime dependencies
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.7.1",
  "pydantic-settings",
  "python-dotenv>=1.0.1",
  "loguru>=0.7.2",
]

[project.optional-dependencies]
google = [
  "google-api-python-client>=2.133.0",
  "google-auth>=2.29.0",
  "google-auth-oauthlib>=1.2.0",
  "google-auth-httplib2>=0.2.0",
]
